syntax = "proto3";

package slowio.proto;

option go_package = "github.com/fanyang89/fusestream/pb";

service FuseStream {
  rpc ListFaults(Void) returns (ListFaultsResponse);
  rpc DeleteFault(DeleteFaultRequest) returns (DeleteFaultResponse);
  rpc InjectFuseFault(InjectFuseFaultRequest) returns (InjectFuseFaultResponse);
  rpc InjectNbdFault(InjectNbdFaultRequest) returns (InjectNbdFaultResponse);
}

message ReturnValueFault {
  float possibility = 1;
  int64 return_value = 2;
}

message DelayFault {
  float possibility = 1;
  int64 delay_ms = 2;
}

message FuseFault {
  int32 id = 1;
  string path_re = 2;
  FuseOp op = 3;

  oneof return_value {
    ReturnValueFault return_value_fault = 4;
  }

  oneof delay {
    DelayFault delay_fault = 5;
  }
}

message ErrorFault {
  float possibility = 1;
  string err = 2;
}

message NbdFault {
  int32 id = 1;
  NbdOp op = 2;

  oneof pre_cond {
    string expression = 6;
  }

  oneof return_value {
    ReturnValueFault return_value_fault = 3;
  }

  oneof err {
    ErrorFault error_fault = 4;
  }

  oneof delay {
    DelayFault delay_fault = 5;
  }
}

message InjectFuseFaultRequest {
  FuseFault fault = 1;
}

message InjectFuseFaultResponse {
  int32 id = 1;
}

message InjectNbdFaultRequest {
  NbdFault fault = 1;
}

message InjectNbdFaultResponse {
  int32 id = 1;
}

message DeleteFaultRequest {
  repeated int32 id = 1;
  string path_re = 2;
  bool all = 3;
}

message DeleteFaultResponse {
  repeated int32 deleted_ids = 1;
}

message Void {}

message ListFaultsResponse {
  repeated FuseFault fuse_faults = 1;
  repeated NbdFault nbd_faults = 2;
}

enum FuseOp {
  FUSE_UNKNOWN = 0;
  FUSE_STATFS = 1;
  FUSE_MKNOD = 2;
  FUSE_MKDIR = 3;
  FUSE_UNLINK = 4;
  FUSE_RMDIR = 5;
  FUSE_LINK = 6;
  FUSE_SYMLINK = 7;
  FUSE_READLINK = 8;
  FUSE_RENAME = 9;
  FUSE_CHMOD = 10;
  FUSE_CHOWN = 11;
  FUSE_UTIMENS = 12;
  FUSE_CREATE = 13;
  FUSE_OPEN = 14;
  FUSE_GETATTR = 15;
  FUSE_TRUNCATE = 16;
  FUSE_READ = 17;
  FUSE_WRITE = 18;
  FUSE_RELEASE = 19;
  FUSE_FSYNC = 20;
  FUSE_OPENDIR = 21;
  FUSE_READDIR = 22;
  FUSE_RELEASEDIR = 23;
}

enum NbdOp {
  NBD_UNKNOWN = 0;
  NBD_READAT = 1;
  NBD_WRITEAT = 2;
  NBD_SIZE = 3;
  NBD_SYNC = 4;
}
